# hexlet_pytest

./: pyproject.toml
.github/workflows/: github_actions.yml
hexlet_pytest/: example.py
tests/: test_example.py  test_fixture.py  test_module.py
