[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Владислав Баленков <vbalenkov@accelcomp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
